# DreamJournalBot

./: README.md
djbot/: .env.template  pyproject.toml
djbot/djbot/: start_up.py
djbot/djbot/api/commands/: start_command.py
djbot/djbot/core/: agent.py
djbot/djbot/core/tool/: __init__.py  search_tool.py
